2009-03-15  Gustavo Noronha Silva  <gns@gnome.org>

Reviewed by Anders Carlsson.

        https://bugs.webkit.org/show_bug.cgi?id=24602
        [Gtk] Searching in thepiratebay.org doesn't work with more than 1 word

        Reintroduce the URI into the soup message after having set it in
        the KURL, on redirects, to make sure it is properly encoded. This
        fixes bad request problems when servers give bad URIs on their
        response's Location header.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::restartedCallback):

Canonical link: https://commits.webkit.org/33778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41719 268f45cc-cd09-0410-ab3c-d52691b4dbfc